--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -19,7 +19,7 @@ azure_connection_string: null # use for connecting to Azure blob storage
 azure_resource_id: null # resource id for use with Azure Active Directory
 azure_storage_account: null # storage account to use on Azure
 azure_resource_group: null # Azure resource group the container (BUCKET_NAME) belongs to
-root_dir: null # base directory to use for Posix storage
+root_dir: hsds # base directory to use for Posix storage
 password_salt: null # salt value if dynamically generated passwords are used
 bucket_name: biosimdev # set to use a default bucket, otherwise bucket param is needed for all requests
 head_port: 5100 # port to use for head node
