--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -1,14 +1,14 @@
 # HSDS configuration
 allow_noauth: true # enable unauthenticated requests
 auth_expiration: -1 # set an expiration for credential caching
-default_public: true # new domains are publically readable by default
+default_public: false # new domains are publically readable by default
 aws_access_key_id: null # Replace with access key for account or use aws_iam_role
 aws_secret_access_key: null # Replace with secret key for account
 aws_iam_role: null # For EC2 using IAM roles
-aws_region: us-east-1
-hsds_endpoint: https://hsds.api.biosimulations.dev # used for hateos links in response
+aws_region: null
+hsds_endpoint: http://hsds.api.biosimulations.dev # used for hateos links in response
 head_endpoint: null # optionally used for nodes to register
-aws_s3_gateway: null # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
+aws_s3_gateway: https://s3low.scality.uchc.edu # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
 aws_dynamodb_gateway: null # use for dynamodb endpint, e.g. 'https://dynamodb.us-east-1.amazonaws.com',
 aws_lambda_gateway: null #  use lambda endpoint for region HSDS is running in.  See: https://docs.aws.amazon.com/general/latest/gr/lambda-service.html
 aws_dynamodb_users_table: null # set to table name if lambda is used to store usernames and passwords
