--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -8,7 +8,7 @@ aws_iam_role: null # For EC2 using IAM roles
 aws_region: null
 hsds_endpoint: http://hsds.api.biosimulations.dev # used for hateos links in response
 head_endpoint: null # optionally used for nodes to register
-aws_s3_gateway: http://s3low.scality.uchc.edu # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
+aws_s3_gateway: https://s3.biosimulations.dev # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
 aws_dynamodb_gateway: null # use for dynamodb endpint, e.g. 'https://dynamodb.us-east-1.amazonaws.com',
 aws_lambda_gateway: null #  use lambda endpoint for region HSDS is running in.  See: https://docs.aws.amazon.com/general/latest/gr/lambda-service.html
 aws_dynamodb_users_table: null # set to table name if lambda is used to store usernames and passwords
