--- a/config/dev/hsds/config.yml
+++ b/config/dev/hsds/config.yml
@@ -6,9 +6,9 @@ aws_access_key_id: null # Replace with access key for account or use aws_iam_rol
 aws_secret_access_key: null # Replace with secret key for account
 aws_iam_role: null # For EC2 using IAM roles
 aws_region: null
-hsds_endpoint: http://hsds.api.biosimulations.dev # used for hateos links in response
+hsds_endpoint: https://hsds.api.biosimulations.dev # used for hateos links in response
 head_endpoint: null # optionally used for nodes to register
-aws_s3_gateway: https://storage.googleapis.com # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
+aws_s3_gateway: http://s3low.scality.uchc.edu # use endpoint for the region HSDS is running in, e.g. 'https://s3.amazonaws.com' for us-east-1
 aws_dynamodb_gateway: null # use for dynamodb endpint, e.g. 'https://dynamodb.us-east-1.amazonaws.com',
 aws_lambda_gateway: null #  use lambda endpoint for region HSDS is running in.  See: https://docs.aws.amazon.com/general/latest/gr/lambda-service.html
 aws_dynamodb_users_table: null # set to table name if lambda is used to store usernames and passwords
@@ -32,7 +32,7 @@ rangeget_port: 6900 # singleton proxy at port 6900
 rangeget_ram: 1g # memoruy for RANGEGET container
 target_sn_count: 0 # desired number of SN containers
 target_dn_count: 0 # desire number of DN containers
-log_level: INFO # log level.  One of ERROR, WARNING, INFO, DEBUG
+log_level: WARNING # log level.  One of ERROR, WARNING, INFO, DEBUG
 max_tcp_connections: 100 # max number of inflight tcp connections
 head_sleep_time: 10 # max sleep time between health checks for head node
 node_sleep_time: 10 # max sleep time between health checks for SN/DN nodes
