--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - apps/simulators-api.yml
   - apps/mail-service.yml
   - apps/combine-service.yml
-  - apps/hdf5-service.yml
+  - apps/hsds-service.yml
   - resources/mongo.yml
   - resources/redis.yml
   - resources/nats.yml
