update endpoints for file storage

--- a/config/prod/combine-service/config.env
+++ b/config/prod/combine-service/config.env
@@ -3,4 +3,4 @@ NATS_QUEUE=combineService
 #UCONN storage bucket
 STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
 STORAGE_BUCKET=biosimprod
-STORAGE_PUBLIC_ENDPOINT=https://data.biosimulations.org/s3/
+STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
