update configs to include s3 url

--- a/config/dev/combine-service/config.env
+++ b/config/dev/combine-service/config.env
@@ -3,4 +3,4 @@ NATS_QUEUE=combineService
 #UCONN storage bucket
 STORAGE_ENDPOINT=http://s3low.scality.uchc.edu
 STORAGE_BUCKET=biosimdev
-STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org
+STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/
