--- a/config/dev/dispatch-api/config.env
+++ b/config/dev/dispatch-api/config.env
@@ -3,3 +3,4 @@ HPC_SSH_PORT=22
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 FILE_STORAGE=/sharedFiles/dev/
 NATS_HOST=nats://dev-nats-cluster:4222
+STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/
