update storage url

--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -4,4 +4,4 @@ HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 FILE_STORAGE=/sharedFiles/dev
 NATS_HOST=nats://dev-nats-cluster:4222
 DISPATCH_URL=https://run.api.biosimulations.dev/
-STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/
+STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
