--- a/overlays/dev/resources.yml
+++ b/overlays/dev/resources.yml
@@ -1,14 +1,15 @@
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: not-needed
+  name: dispatch-api
 spec:
   template:
     spec:
       containers:
-        resources:
-          requests:
-            memory: "4Mi"
-            cpu: "25m"
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        - resources:
+            requests:
+              memory: "4Mi"
+              cpu: "25m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
