add redis queue config

--- a/config/prod/dispatch-api/config.env
+++ b/config/prod/dispatch-api/config.env
@@ -4,3 +4,5 @@ HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 FILE_STORAGE=/sharedFiles/dev/
 NATS_HOST=nats://dev-nats-cluster:4222
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
+REDIS_HOST=redis-cluster
+REDIS_PORT=6379
