--- a/config/prod/dispatch-service/config.env
+++ b/config/prod/dispatch-service/config.env
@@ -5,3 +5,5 @@ FILE_STORAGE=/sharedFiles/dev
 NATS_HOST=nats://dev-nats-cluster:4222
 DISPATCH_URL=https://run.api.biosimulations.dev/
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
+REDIS_HOST=redis-cluster
+REDIS_PORT=6379
