--- a/config/dev/dispatch-service/config.env
+++ b/config/dev/dispatch-service/config.env
@@ -4,5 +4,5 @@ HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 FILE_STORAGE=/sharedFiles/dev
 NATS_HOST=nats://dev-nats-cluster:4222
 DISPATCH_URL=https://run.api.biosimulations.dev/
-REDIS_HOST=http://dev-redis-cluster
+REDIS_HOST=redis://dev-redis-cluster
 REDIS_PORT=6379
