mount config files for all apps

--- a/base/apps/combine-service.yml
+++ b/base/apps/combine-service.yml
@@ -22,8 +22,8 @@ spec:
             - mountPath: "/app/secret"
               name: secret
               readOnly: true
-            - mountPath: "/app/config"
-              name: config
+            - name: config
+              mountPath: "/app/config"
               readOnly: true
           ports:
             - containerPort: 3333
