--- a/base/apps/account-api.yml
+++ b/base/apps/account-api.yml
@@ -28,6 +28,9 @@ spec:
         - name: secret
           secret:
             secretName: account-api-secrets
+        - name: config
+          secret:
+            secretName: account-api-config
 ---
 apiVersion: v1
 kind: Service
