--- a/base/apps/simulators-api.yml
+++ b/base/apps/simulators-api.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: simulators-api
   name: simulators-api
-  
+
 spec:
   selector:
     matchLabels:
@@ -20,6 +20,9 @@ spec:
           image: ghcr.io/biosimulations/simulators-api
           imagePullPolicy: "Always"
           volumeMounts:
+            - name: config
+              mountPath: "/app/config"
+              readOnly: true
             - mountPath: "/app/secret"
               name: secret
               readOnly: true
@@ -29,6 +32,9 @@ spec:
         - name: secret
           secret:
             secretName: simulators-api-secrets
+        - name: config
+          secret:
+            secretName: simulators-api-config
 ---
 apiVersion: v1
 kind: Service
