--- a/base/apps/platform-api.yml
+++ b/base/apps/platform-api.yml
@@ -33,8 +33,8 @@ spec:
           secret:
             secretName: platform-api-secrets
         - name: config
-          secret:
-            secretName: platform-api-config
+          configMap:
+            name: platform-api-config
 ---
 apiVersion: v1
 kind: Service
