--- a/base/apps/simulators-api.yml
+++ b/base/apps/simulators-api.yml
@@ -33,8 +33,8 @@ spec:
           secret:
             secretName: simulators-api-secrets
         - name: config
-          secret:
-            secretName: simulators-api-config
+          configMap:
+            name: simulators-api-config
 ---
 apiVersion: v1
 kind: Service
