--- a/config/dev/dispatch-service/config.env
+++ b/config/dev/dispatch-service/config.env
@@ -2,7 +2,7 @@ HPC_SSH_HOST=biosim-submit-ext.cam.uchc.edu
 HPC_SSH_PORT=22
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 FILE_STORAGE=/sharedFiles/dev
-NATS_HOST=nats://dev-nats-cluster:4222
+NATS_HOST=nats://nats-cluster:4222
 DISPATCH_URL=https://run.api.biosimulations.dev/
-REDIS_HOST=dev-redis-primary
+REDIS_HOST=redis-primary
 REDIS_PORT=6379
