--- a/base/apps/hsds-service.yml
+++ b/base/apps/hsds-service.yml
@@ -1,4 +1,4 @@
-kind: ClusterRole
+kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pods-list
@@ -7,7 +7,7 @@ rules:
     resources: ["pods"]
     verbs: ["list"]
 ---
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: pods-list
@@ -16,7 +16,7 @@ subjects:
     name: default
 
 roleRef:
-  kind: ClusterRole
+  kind: Role
   name: pods-list
   apiGroup: rbac.authorization.k8s.io
 ---
