--- a/base/resources/redis.yml
+++ b/base/resources/redis.yml
@@ -35,7 +35,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: redis:5.0.1-alpine
+          image: redis
           ports:
             - containerPort: 6379
               name: client
