add project permissions

--- a/base/custom/argo/biosimulations-prod.yaml
+++ b/base/custom/argo/biosimulations-prod.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: biosimulations-production
+  name: biosimulations-prod
   namespace: argocd
 spec:
   destination:
