--- a/base/custom/argo/argo-cm-rbac.yaml
+++ b/base/custom/argo/argo-cm-rbac.yaml
@@ -12,6 +12,10 @@ data:
     p, role:org-admin, repositories, create, *, allow
     p, role:org-admin, repositories, update, *, allow
     p, role:org-admin, repositories, delete, *, allow
+    p, role:org-admin, projects, get, *, allow
+    p, role:org-admin, projects, create, *, allow
+    p, role:org-admin, projects, update, *, allow
+    p, role:org-admin, projects, default, *, allow
 
     p, role:org-developer, applications, get, */*, allow
     p, role:org-developer, clusters, get, *, allow
