--- a/base/custom/argo/argo-cm-rbac.yaml
+++ b/base/custom/argo/argo-cm-rbac.yaml
@@ -8,6 +8,7 @@ data:
   policy.csv: |
     p, role:org-admin, applications, *, */*, allow
     p, role:org-admin, clusters, get, *, allow
+    p, role:org-admin, clusters, update, *, allow
     p, role:org-admin, repositories, get, *, allow
     p, role:org-admin, repositories, create, *, allow
     p, role:org-admin, repositories, update, *, allow
