--- a/base/custom/argo/biosimulations-project.yaml
+++ b/base/custom/argo/biosimulations-project.yaml
@@ -11,7 +11,30 @@ spec:
   orphanedResources:
     warn: true
 
-  
+  # Deny all cluster-scoped resources from being created, except for Namespace
+  clusterResourceWhitelist:
+  - group: ''
+    kind: Namespace
+
+  # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
+  namespaceResourceBlacklist:
+  - group: ''
+    kind: ResourceQuota
+  - group: ''
+    kind: LimitRange
+  - group: ''
+    kind: NetworkPolicy
+
+
+
+  roles:
+  # A role which provides read-only access to all applications in the project
+  - name: read-only
+    description: Read-only privileges to biosimulations
+    policies:
+    - p, proj:biosimulations:read-only, applications, get, biosimulations/*, allow
+    groups:
+    - biosimulations-software
 
 
 
