--- a/cluster/argo/argo-application.yml
+++ b/cluster/argo/argo-application.yml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'git@github.com:biosimulations/Biosimulations-Deployment.git'
-    path: base/cluster/argo
+    path: cluster/argo
     targetRevision: HEAD
     directory:
       jsonnet:
