--- a/overlays/dev/biosimulations-ingress.yml
+++ b/overlays/dev/biosimulations-ingress.yml
@@ -34,6 +34,10 @@ spec:
           - backend:
               serviceName: platform-api
               servicePort: 80
+          - backend:
+              serviceName: account-api
+              servicePort: 80
+              path: /account
 
     - host: run.api.biosimulations.dev
       http:
