--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -8,50 +8,51 @@ namespace: dev
 
 #Change the tag on the images
 images:
-- name: ghcr.io/biosimulations/account-api
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/combine-service
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/dispatch-api
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/dispatch-service
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/mail-service
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/ontology-api
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/platform-api
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
-- name: ghcr.io/biosimulations/simulators-api
-  newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/account-api
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/combine-service
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/dispatch-api
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/dispatch-service
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/mail-service
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/ontology-api
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/platform-api
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
+  - name: ghcr.io/biosimulations/simulators-api
+    newTag: fa465706ec4871b2d66acdc8150ad284329818dc
 
 #scale down dev deployment
 replicas:
-- count: 1
-  name: account-api
-- count: 2
-  name: dispatch-api
-- count: 2
-  name: dispatch-service
-- count: 2
-  name: hsds
-- count: 2
-  name: mail-service
-- count: 1
-  name: ontology-api
-- count: 1
-  name: platform-api
-- count: 1
-  name: simulators-api
+  - count: 1
+    name: account-api
+  - count: 2
+    name: dispatch-api
+  - count: 2
+    name: dispatch-service
+  - count: 2
+    name: hsds
+  - count: 2
+    name: mail-service
+  - count: 1
+    name: ontology-api
+  - count: 1
+    name: platform-api
+  - count: 1
+    name: simulators-api
 
 #Use the development version of the secrets and ingress
 resources:
-- dev.yml
-- biosimulations-ingress.yml
-- biosimulators-ingress.yml
-- ../../secrets/dev
-- ../../config/dev
-- ../../base
+  - dev.yml
+  - biosimulations-ingress.yml
+  - biosimulators-ingress.yml
+  - nats-js.yml
+  - ../../secrets/dev
+  - ../../config/dev
+  - ../../base
 
 patchesStrategicMerge:
-- resources.yml
+  - resources.yml
