--- a/cluster/argo/nats-jetstream-.yml
+++ b/cluster/argo/nats-jetstream-.yml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: "default"
+    namespace: "dev"
   syncPolicy:
     automated: {}
     syncOptions:
