allow cluster resources in biosimulations

--- a/cluster/argo/biosimulations-project.yaml
+++ b/cluster/argo/biosimulations-project.yaml
@@ -19,6 +19,13 @@ spec:
   clusterResourceWhitelist:
     - group: ""
       kind: Namespace
+    - group: ""
+      kind: CustomResourceDefinition
+    - group: ""
+      kind: ClusterRole
+    - group: ""
+      kind: ClusterRoleBinding
+
 
   # Allow all namespaced-scoped resources to be created, except for ResourceQuota, LimitRange, NetworkPolicy
   namespaceResourceBlacklist:
