--- a/overlays/dev/kustomization.yml
+++ b/overlays/dev/kustomization.yml
@@ -43,6 +43,8 @@ replicas:
   name: platform-api
 - count: 1
   name: simulators-api
+- count: 1
+  name: combine-service
 
 #Use the development version of the secrets and ingress
 resources:
