set api.biosimulations.org to be dispatch api

--- a/overlays/deploy/biosimulations-ingress.yml
+++ b/overlays/deploy/biosimulations-ingress.yml
@@ -31,7 +31,7 @@ spec:
       http:
         paths:
           - backend:
-              serviceName: platform-api
+              serviceName: dispatch-api
               servicePort: 80
     - host: run.api.biosimulations.org
       http:
