--- a/base/apps/combine-service.yml
+++ b/base/apps/combine-service.yml
@@ -19,11 +19,14 @@ spec:
           image: ghcr.io/biosimulations/combine-service
           imagePullPolicy: "Always"
           volumeMounts:
-            - mountPath: "/app/secret"
-              name: secret
-              readOnly: true
             - name: config
               mountPath: "/app/config"
+              readOnly: true
+            - mountPath: /app/secret
+              name: secret
+              readOnly: true
+            - name: shared
+              mountPath: "/app/shared"
               readOnly: true
           ports:
             - containerPort: 3333
@@ -34,6 +37,9 @@ spec:
         - name: config
           configMap:
             name: combine-service-config
+        - name: shared
+          configMap:
+            name: shared-config
 ---
 apiVersion: v1
 kind: Service
