--- a/base/apps/dispatch-api.yml
+++ b/base/apps/dispatch-api.yml
@@ -22,6 +22,9 @@ spec:
         - name: config
           configMap:
             name: dispatch-api-config
+        - name: shared
+          configMap:
+            name: shared-config
       containers:
         - name: dispatch-api
           image: "ghcr.io/biosimulations/dispatch-api"
@@ -34,6 +37,9 @@ spec:
               readOnly: true
             - mountPath: /app/secret
               name: secret
+              readOnly: true
+            - name: shared
+              mountPath: "/app/shared"
               readOnly: true
 ---
 apiVersion: v1
