--- a/base/apps/dispatch-service.yml
+++ b/base/apps/dispatch-service.yml
@@ -22,6 +22,9 @@ spec:
         - name: config
           configMap:
             name: dispatch-service-config
+        - name: shared
+          configMap:
+            name: shared-config
       containers:
         - name: dispatch-service
           image: "ghcr.io/biosimulations/dispatch-service"
@@ -32,4 +35,7 @@ spec:
               readOnly: true
             - mountPath: /app/secret
               name: secret
+              readOnly: true
+            - name: shared
+              mountPath: "/app/shared"
               readOnly: true
