--- a/base/apps/mail-service.yml
+++ b/base/apps/mail-service.yml
@@ -22,8 +22,11 @@ spec:
             - name: config
               mountPath: "/app/config"
               readOnly: true
-            - mountPath: "/app/secret"
+            - mountPath: /app/secret
               name: secret
+              readOnly: true
+            - name: shared
+              mountPath: "/app/shared"
               readOnly: true
       volumes:
         - name: secret
@@ -32,3 +35,6 @@ spec:
         - name: config
           configMap:
             name: mail-service-config
+        - name: shared
+          configMap:
+            name: shared-config
