--- a/base/apps/platform-api.yml
+++ b/base/apps/platform-api.yml
@@ -26,6 +26,9 @@ spec:
             - mountPath: "/app/secret"
               name: secret
               readOnly: true
+            - name: shared
+              mountPath: "/app/shared"
+              readOnly: true
           ports:
             - containerPort: 3333
       volumes:
@@ -35,6 +38,9 @@ spec:
         - name: config
           configMap:
             name: platform-api-config
+        - name: shared
+          configMap:
+            name: shared-config
 ---
 apiVersion: v1
 kind: Service
