--- a/config/dev/shared.env
+++ b/config/dev/shared.env
@@ -10,25 +10,25 @@ HPC_SSH_PORT=22
 HPC_SSH_USERNAME=crbmapi
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/dev/simulations
 HPC_HOME_DIR=/home//FCAM/crbmapi
-HPC_SSH_PRIVATE_KEY=
+#HPC_SSH_PRIVATE_KEY=
 
 #Nats address
 NATS_HOST=nats://nats-cluster:4222
-NATS_QUEUE=
+#NATS_QUEUE=
 
 # Storage bucket
 STORAGE_PUBLIC_ENDPOINT=https://files-dev.biosimulations.org/s3/
 STORAGE_BUCKET=biosimdev
-STORAGE_ACCESS_KEY=
-STORAGE_SECRET=
+#STORAGE_ACCESS_KEY=
+#STORAGE_SECRET=
 
 #Redis Settings
 REDIS_HOST=redis-primary
 REDIS_PORT=6379
 
 # HSDS INFORMATION
-HSDS_USERNAME=
-HSDS_PASSWORD=
+#HSDS_USERNAME=
+#HSDS_PASSWORD=
 HSDS_BASEPATH=http://hsds:80
 
 #Public URLS
