comment out unused vars

--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -9,26 +9,26 @@ HPC_SSH_HOST=biosim-submit-ext.cam.uchc.edu
 HPC_SSH_PORT=22
 HPC_SSH_USERNAME=crbmapi
 HPC_BASE_DIR=/home/FCAM/crbmapi/nfs/biosimulations/prod/simulations
-HPC_HOME_DIR=/home//FCAM/crbmapi
-HPC_SSH_PRIVATE_KEY=
+HPC_HOME_DIR=/home/FCAM/crbmapi
+#HPC_SSH_PRIVATE_KEY=
 
 #Nats address
 NATS_HOST=nats://nats-cluster:4222
-NATS_QUEUE=
+#NATS_QUEUE=
 
 # Storage bucket
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 STORAGE_BUCKET=biosimprod
-STORAGE_ACCESS_KEY=
-STORAGE_SECRET=
+#STORAGE_ACCESS_KEY=
+#STORAGE_SECRET=
 
 #Redis Settings
 REDIS_HOST=redis-primary
 REDIS_PORT=6379
 
 # HSDS INFORMATION
-HSDS_USERNAME=
-HSDS_PASSWORD=
+#HSDS_USERNAME=
+#HSDS_PASSWORD=
 HSDS_BASEPATH=http://hsds:80
 
 #Public URLS
