--- a/base/apps/hsds-service.yml
+++ b/base/apps/hsds-service.yml
@@ -53,7 +53,7 @@ spec:
     spec:
       containers:
         - name: sn
-          image: hdfgroup/hsds
+          image: hdfgroup/hsds:v0.7.0beta4 
           imagePullPolicy: Always
           ports:
             - containerPort: 5101
@@ -87,7 +87,7 @@ spec:
               mountPath: "/config/override.yml"
               subPath: override.yml
         - name: dn
-          image: hdfgroup/hsds
+          image: hdfgroup/hsds:v0.7.0beta4 
           lifecycle:
             preStop:
               exec:
