--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -1,4 +1,8 @@
 # Settings common to all apps
+
+#Server Settings
+ENV=prod
+
 # Authentication settings
 AUTH0_DOMAIN=https://auth.biosimulations.org/
 AUTH0_ISSUER=https://auth.biosimulations.org/
