--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -21,6 +21,7 @@ NATS_HOST=nats://nats-cluster:4222
 #NATS_QUEUE=
 
 # Storage bucket
+STORAGE_ENDPOINT=https://s3low.scality.uchc.edu
 STORAGE_PUBLIC_ENDPOINT=https://files.biosimulations.org/s3/
 STORAGE_BUCKET=biosimprod
 #STORAGE_ACCESS_KEY=
