--- a/cluster/argo/biosimulations-dev.yaml
+++ b/cluster/argo/biosimulations-dev.yaml
@@ -10,7 +10,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   source:
     path: overlays/dev
-    repoURL: 'git@github.com:biosimulations/Biosimulations-Deployment.git'
+    repoURL: 'ssh://git@github.com/biosimulations/deployment.git'
     targetRevision: HEAD
   project: biosimulations
   syncPolicy:
