update deployment settings, adds instrcutions

--- a/cluster/argocd/argo-application.yml
+++ b/cluster/argocd/argo-application.yml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'ssh://git@github.com/biosimulations/deployment.git'
-    path: cluster/argo
+    path: cluster/argocd
     targetRevision: HEAD
     directory:
       jsonnet:
