--- a/config/prod/shared.env
+++ b/config/prod/shared.env
@@ -17,7 +17,7 @@ HPC_HOME_DIR=/home/FCAM/crbmapi
 #HPC_SSH_PRIVATE_KEY=
 
 #Nats address
-NATS_HOST=nats://nats-cluster:4222
+NATS_HOST=nats://nats:4222
 #NATS_QUEUE=
 
 # Storage bucket
