--- a/base/resources/nats.yml
+++ b/base/resources/nats.yml
@@ -1,7 +1,7 @@
 apiVersion: nats.io/v1alpha2
 kind: NatsCluster
 metadata:
-  name: nats-cluster
+  name: nats
 spec:
   size: 3
   version: "2.3.2"
